--- a/src/components/alg/alg-conspect/sp/pages/elem-sp17.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp17.html
@@ -18,6 +18,9 @@
 
   <p>
     <a href="p1">Динамическое программирование #2. По состояниям</a>
+    <br><a href="p2">Задача 1. Кузнечик</a>
+    <br><a href="p3">Задача 2. Сумма цифр</a>
+    <br><a href="p4">Задача 3. Задача из университета</a>
   </p>
   <p>
     <a href="#task1">Задача A. Миллиардная Функция Васи</a>
@@ -36,6 +39,145 @@
     <br><a href="#task14">Задача N. Считаем прямоугольники</a>
     <br><a href="#task15">Задача O. Пирамида из банок</a>
   </p>
+</article>
+
+
+<!-- Динамическое программирование #2. По состояниям -->
+<article class="article">
+  <div class="anchor" id="p1"></div>
+  <h3>Динамическое программирование #2. По состояниям</h3>
+
+  <p>ДП по состояниям — это раздел задач динамического программирования, в которых мы хотим сохранять информацию об объекте с учетом его состояния.</p>
+  <p>Чаще всего для решения задач по ДП по состояниям требуется увеличение размерности объекта хранения.</p>
+</article>
+
+
+<!-- Задача 1. Кузнечик -->
+<article class="article">
+  <div class="anchor" id="p2"></div>
+  <h3>Задача 1. Кузнечик</h3>
+
+  <p>Кузнечик находится на кочке 0, ему необходимо добраться до кочки n. Кузнечик умеет прыгать на соседнюю кочку или через одну кочку вперед. Вместо кочек бывают лужи куда кузнечик прыгнуть не может. Сколькими способами кузнечик может добраться до кочки n за минимальное количество прыжков?</p>
+  <p>Рассмотрим пример:</p>
+  <p>11011110111 - 1 кочка, 0 лужа, n равняется 10.</p>
+  <p>Кузнечик может прыгать на +1 и +2. Приведем несколько вариантов пути:</p>
+  <code>0 - 1 - 3 - 4 - 5 - 6 - 8 - 9 - 10 самый длинный путь.</code>
+  <code>0 - 1 - 3 - 5 - 6 - 8 - 10 один из коротких путей.</code>
+  <p>Приведем обобщённое решение. Нам потребуется увеличить размерность объекта ДП из обычной задачи про кузнечика.</p>
+  <p>Последовательно ответим на 5 вопросов ДП:</p>
+  <ol>
+    <li>Что храним? Создадим двумерный массив DP. В ячейке DP[i][j] будем хранить количество способов попасть кузнечику на кочку под номером j за i прыжков.</li>
+    <li>Как считаем ячейку?
+      <code>Если str[j]==1, тогда DP[i][j]=DP[i-1][j-1]+DP[i-1][j-2]</code>
+      <code>Если str[j]==0, тогда DP[i][j]=0</code>
+    </li>
+    <li>Что является простейшим случаем? (база) Ситуация, когда кузнечик никуда не прыгал. Заполним первую строку в матрице.</li>
+    <li>Как обходить объект ДП? Классический обход слева направо сверху вниз.</li>
+    <li>Где хранится ответ на задачу? Ответ хранится в последнем столбце, необходимо будет найти первый элемент отличный от нуля.</li>
+  </ol>
+</article>
+
+
+<!-- Задача 2. Сумма цифр -->
+<article class="article">
+  <div class="anchor" id="p3"></div>
+  <h3>Задача 2. Сумма цифр</h3>
+
+  <p>Сколько целых чисел длины n чья сумма цифр ровняется k?</p>
+  <p>Отмечу, что очень часто в таких задачах требуется вывести ответ по модулю, потому что ответ слишком большой, например 10⁹ + 7. Для удобства нам потребуется постоянно брать промежуточные вычисления по модулю.</p>
+  <code>(a1 + a2 + a3 + a4 + ... + an)%mod</code>
+  <p>Это требуется, чтобы не пользоваться длинной арифметикой.</p>
+  <p>Последовательно ответим на 5 вопросов ДП:</p>
+  <ol>
+    <li>Что храним? Создадим двумерный массив DP. В ячейке DP[i][j] будем хранить количество чисел длины j чья сумма цифр равняется i.</li>
+    <li>Как считаем ячейку? Заметим, что если у нас было число длины z с суммой цифр g и мы допишем к нему справа 5, то длина увеличится на 1, а сумма увеличится на 5. Это позволяет нам додуматься, что для подсчета ячейки DP[i][j] требуется собрать сумму 10 элементов из столбика ранее.</li>
+    <li>Что является простейшим случаем? (база) Однозначные числа, в них сумма цифр очевидна.</li>
+    <li>Как обходить объект ДП? Классический обход слева направо сверху вниз.</li>
+    <li>Где хранится ответ на задачу? Ответ хранится в DP[k][n].</li>
+  </ol>
+</article>
+
+
+<!-- Задача 3. Задача из университета -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>Задача 3. Задача из университета</h3>
+
+  <p>Студенты ЯрГУ математического факультета с направления ПМИ сдают на втором курсе предмет основы информатики. Для прохождения на экзамен им необходимо выполнить норматив по решению задач. Со всего потока примерно 75 человек. Для допуска на экзамен необходимо сдать 100 задач.</p>
+  <p>Как проверить что человек решал самостоятельно задачи? Проверка студентов на понимание кода и алгоритмов не дает проверку на честность решения норматива.</p>
+  <p>Программный способ проверки схожести посылок студентов:</p>
+  <ul>
+    <li>Скачивание посылок решений студентов с codeforces на локальный
+компьютер</li>
+    <li>Способы преобразования текстов (тривиальные подходы)</li>
+    <li>Реализвация алгоритма на проверку схожести текстов (Алгоритм
+Левенштейна)</li>
+  </ul>
+  <p>Плюсы:</p>
+  <ul>
+    <li>Не требуется большая ручная проверка посылок участников</li>
+    <li>Скорость проверки</li>
+    <li>Возможность модернизации программы</li>
+  </ul>
+  <p>Минусы:</p>
+  <ul>
+    <li>У каждого участника возможны потери посылок, даже если они делали всё самостоятельно</li>
+    <li>Зная сам алгоритм и способ обработки информации, студенты могли изменять свой код так, чтобы их посылки считались корректными всегда</li>
+  </ul>
+  <p>Результаты по посылкам студентов:</p>
+  <ul>
+    <li>Вся проверка автоматизирована и занимает примерно 2 часа при полной проверке решения студентов по подготовленной базе решений</li>
+    <li>Нормальным количеством потерянных посылок у студентов считается 3-10%</li>
+    <li>Улучшенная версия программы способна утверждать кто с кем общается (дружит)</li>
+    <li>Собрана статистика по студентам, выявлены характеристики и принципы написания кода</li>
+  </ul>
+
+  <h4>Алгоритм Левенштейна</h4>
+  <p>Самая главная часть всей программы - это алгоритм проверка схожести кода. Любая программа - это всего лишь длинная строка, поэтому задача схожести кодов - это проверка на схожесть длинных строк. Существует классический алгоритм Левенштейна проверяющий сколько требуется сделать изменений в str1, чтобы получить str2.</p>
+  <p>Действия, которые можно применять к строке:</p>
+  <ul>
+    <li>Добавить 1 символ в любое место в str1</li>
+    <li>Удалить 1 символ в любом месте в str1</li>
+    <li>Изменить любой 1 символ в str1</li>
+  </ul>
+  <p>В качестве результата алгоритм Левенштейна укажет, какое минимальное количество действий необходимо выполнить, чтобы из str1 получить str2.</p>
+  <p>В качестве примера потребуется рассмотрим преобразование строки КОРЖИК в строку КОТИК.</p>
+  <p>Последовательно ответим на 5 вопросов ДП:</p>
+  <ol>
+    <li>Что храним? Создадим двумерный массив DP. В ячейке DP[i][j] будем хранить количество изменений, чтобы изменить префикс str1 длины i в префикс str2 длины j.</li>
+    <li>Как считаем ячейку? Если str1[i] == str2[j], тогда DP[i][j] = DP[i - 1][j - 1]. Если str1[i]! = str2[j], тогда
+    <code>DP[i][j] = min(DP[i - 1][j - 1], min(DP[i][j - 1],DP[i - 1][j])) + 1.</code>
+    </li>
+    <li>Что является простейшим случаем? (база) Первый столбец и первая строка, преобразование пустой строки в str2 и из str1 в пустую строку.</li>
+    <li>Как обходить объект ДП? Классический обход слева направо сверху вниз.</li>
+    <li>Где хранится ответ на задачу? Ответ хранится в ячейке DP[str1.size()][str2.size()].</li>
+  </ol>
+
+  <h4>Реализация алгоритма Левенштейна</h4>
+<pre>
+string str1, str2;
+cin >> str1 >> str2;
+
+vector&lt;vector&lt;int&gt; &gt; DP(str1.size() + 1, vector&lt;int&gt;(str2.size() + 1));
+for (int i = 0; i &lt;= str1.size(); i++) {
+  DP[i][0] = i;
+}
+for (int j = 0; j &lt;= str2.size(); j++) {
+  DP[0][j] = j;
+}
+for (int i = 1; i &lt;= str1.size(); i++) {
+  for (int j = 1; j &lt;= str2.size(); j++) {
+    if (str1[i-1] = str2[j-1]) {
+      DP[i][j] = DP[i-1][j-1];
+    } else {
+      DP[i][j] = min(DP[i-1][j-1], min(DP[i-1][j], DP[i][j-1])) + 1;
+    }
+  }
+}
+cout &lt;&lt; DP[str1.size()][str2.size()];
+</pre>
+
+<p>Самый главный минус классической реализации алгоритма Левенштейна - это необходимость создания двумерной матрицы. В первых реализациях собственного антиплагиата если текст участника был слишком большой посылка считалась перманентно не списанной в силу того, что ее нельзя было проверить.</p>
 </article>
 
 
