--- a/src/components/alg/alg-conspect/sp/pages/elem-sp5.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp5.html
@@ -881,6 +881,44 @@ nutforajarofatuna
   <p>В четвертом наборе входных данных «baa» — единственный правильный ответ.</p>
   <p>В пятом наборе входных данных мы можем получить только «aa», что является палиндромом. Следовательно, ответ «NO».</p>
   <p>В шестом наборе входных данных «anutforajaroftuna» — палиндром, но вставка 'a' в любом другом месте подходит.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Нужно букву 'a' поставить в слове так, чтобы зеркальная ей буква была не 'a'. Пойдем от начала слова и будем проверять каждую букву, запомним индекс ai первой буквы которая будет не 'a' и поставим в строку букву 'a' на расстоянии ai от конца слова</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int t;
+  cin >> t;
+  while (t--) {
+    string s;
+    cin >> s;
+
+    // решение
+    int n = s.size();
+    int ai = -1;
+    char a = 'a';
+    for (int i = 0; i &lt; n; i++) {
+      if (s[i] != a && ai == -1) {
+        ai = i; // индекс буквы 'a' с конца
+      }
+    }
+
+    // вывод результата
+    if (ai == -1) {
+      cout &lt;&lt; "NO" &lt;&lt; '\n';
+    } else {
+      string res = s.substr(0, n - ai) + a + s.substr(n - ai, n);
+      cout &lt;&lt; "YES" &lt;&lt; '\n' &lt;&lt; res &lt;&lt; '\n';
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -916,6 +954,59 @@ nutforajarofatuna
   <code>yeee</code>
   <code>No</code>
   <p>В третьем примере ни одного подходящего разбиения не существует.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>В строке должно быть не менее 4 букв. Если это 2 разные буквы, то каждой из них должно быть не меньше двух. Если это 3 разные буквы, то одной из них должно быть не меньше двух. Если это 4 разные буквы то подходит. Более 4 разных букв не может быть.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  string s;
+  cin >> s;
+
+  // решение
+  bool res = 0;
+  vector&lt;int&gt; A(256, 0);
+  for (int i = 0; i &lt; s.size(); i++) {
+    int tmp = s[i];
+    A[tmp]++;
+  }
+
+  vector&lt;int&gt; B(0);
+  for (int i = 0; i &lt; A.size(); i++) {
+    if (A[i]) {
+      B.push_back(A[i]);
+    }
+  }
+
+  sort(B.begin(), B.end());
+  if ( (B.size() == 2) && (B[0] > 1) ) {
+    res = 1;;
+  } else if ( (B.size() == 3) && (B[2] > 1) ) {
+    res = 1;
+  } else if (B.size() == 4) {
+    res = 1;
+  }
+
+  if (s.size() &lt; 4) {
+    res = 0;
+  }
+
+  // вывод результата
+  if (res) {
+    cout &lt;&lt; "Yes";
+  } else {
+    cout &lt;&lt; "No";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -969,6 +1060,59 @@ abc
 </pre>
   <code>3 4</code>
   <p>Рассмотрим второй тест. Как бы Ваня ни вводил пароли, он не сможет добиться того, чтобы доступ к сайту заблокировался. Так как необходимый пароль имеет длину 2, Ваня в любом случае введёт сначала все пароли длины 1, потратив на это 2 секунды. Затем, в лучшем случае, он сразу введёт необходимый пароль, и ответ в лучшем случае будет равен 3, а в худшем случае сначала введёт неверный пароль длины 2, и только потом верный, и потратит 4 секунды.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Отсортировать пароли. Минимальное число попыток это до первого пароля нужной длины. Максимальное число попыток это то последнего пароля нужной длины. Осталось учиесть что через каждые k попыток +5 секунд</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+#include &lt;string&gt;
+
+using namespace std;
+
+bool compare(const string& s1, const string& s2) {
+  return s1.length() &lt; s2.length();
+}
+
+int main() {
+  // входные данные
+  int n, k;
+  cin >> n >> k;
+  vector&lt;string&gt; S;
+  S.reserve(n);
+  string tmp;
+  for (int i = 0; i &lt; n; i++) {
+    cin >> tmp;
+    S.push_back(tmp);
+  }
+  string ans;
+  cin >> ans;
+
+  // решение
+  sort(begin(S), end(S), compare);
+  int num1 = 1, num2 = 0, i = 0;
+
+  while ( (i &lt; n) && (S[i].length() &lt; ans.length()) ) {
+    num1++;
+    i++;
+  }
+
+  i = 0;
+  while ( (i &lt; n) && (S[i].length() &lt;= ans.length()) ) {
+    num2++;
+    i++;
+  }
+
+  num1 += 5 * ( (num1 - 1) / k);
+  num2 += 5 * ( (num2 - 1) / k);
+
+  // вывод результата
+  cout &lt;&lt; num1 &lt;&lt; ' ' &lt;&lt; num2;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -1148,6 +1292,52 @@ xxxxxx
   <p>В третьем наборе входных данных все буквы различны, поэтому в красный цвет можно покрасить любой набор символов, количество которых не превышает половину длины строки и является максимально возможным.</p>
   <p>В четвёртом наборе входных данных всего один символ, поэтому, если покрасить его в красный, мы не сможем покрасить какой-либо другой символ в зелёный цвет.</p>
   <p>В пятом наборе входных данных все буквы одинаковы, поэтому нельзя покрасить более одного символа в красный цвет.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Результат равен количеству различных символов, которых не более одного, поделить на 2. Плюс количество различных символов, которых 2 и более. Но не более половины строки.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;string&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int t;
+  cin >> t;
+
+  while (t--) {
+    string s;
+    cin >> s;
+
+    // решение
+    // количество символов алфавита
+    vector&lt;int&gt; A(26, 0);
+    int temp;
+    for (int i = 0; i &lt; s.size(); i++) {
+      A[s[i] - 'a']++;
+    }
+    int count1 = 0;
+    int count2 = 0;
+    for (int i = 0; i &lt; A.size(); i++) {
+      if (A[i] == 1) {
+        count1++;
+      } else if (A[i] > 1) {
+        count2++;
+      }
+    }
+    int res = count1 / 2 + count2;
+    res = min(res, ((int)s.size() / 2));
+
+    // вывод результата
+    cout &lt;&lt; res &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -1221,6 +1411,11 @@ ca
   <p>Во втором наборе входных данных примера 1-е и 3-е слова могут быть использованы для составления интересного рассказа. Рассказ будет иметь вид «aba aba». Заметим, что все три слова одновременно использовать нельзя.</p>
   <p>В третьем наборе входных данных примера автор не может составить непустой интересный рассказ. Поэтому ответ равен 0.</p>
   <p>В четвертом наборе входных данных примера 3-е и 4-е слова могут быть использованы для составления интересного рассказа. Рассказ будет иметь вид «c bc».</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Находим самую частую букву во всех словах. Запоминаем ее количество cnt_max. Считаем количество всех остальных букв cnt_oth. Если cnt_max > cnt_oth то ответ это все n слов</p>
+  </details>
 </article>
 
 
