--- a/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
+++ b/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
@@ -4957,3 +4957,195 @@ Unsorted!
   </details>
 </article>
 
+
+<!-- 4 Сложные структуры данных -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>4 Сложные структуры данных</h3>
+</article>
+
+
+<!-- 4.1 Указатели -->
+<article class="article">
+  <div class="anchor" id="p4.1"></div>
+  <h3>4.1 Указатели</h3>
+
+  <p>Любая программа на C++ работает в памяти. В нулевом приближении будем считать что память это просто последовательность байт. Для каждой переменной или массиву переменных выделяется соответствующее количество последовательно расположенных ячеек памяти. Для типа int 4, для типа double 8, для массива их 30-ти long long 8*30 = 240 байт.</p>
+  <p>Указатель это переменная, которая хранит адрес в памяти где находится переменная, а точнее номер первой ячейки.</p>
+  <p>Чтобы создать указатель на переменную типа int нужно записать</p>
+  <code>int *uk;</code>
+  <p>Переменная создана, но она не проинициализирована, она никуда не указывает. Чтобы это исправить, создадим переменную типа int и запишем ее адрес в указатель</p>
+  <code>int d = 5;</code>
+  <code>uk = &d;;</code>
+  <p>Здесь знак & это оператор, который по заданной переменной d находит ее адрес в памяти. Вычисляется адрес переменной d и записывается в uk.</p>
+  <p>Указатель хранит в себе адрес переменной. Чтобы получить значение переменной нужно выполнить операцию разименования указателя. Для этого служит оператор звездочка *. Оператор звездочка * является обратным к оператору амперсанд &. Результатом является, в нулевом приближении, значение хранящееся в области памяти, на которую указывает оператор звездочка *.</p>
+  <p>Пока uk указывает на переменную d, выражение *uk это практически псевдоним d. Можно брать (*uk) в скобки, чтобы понять что это не операция умножения, а операция разименования.</p>
+  <p>Чтобы объявить несколько указателей в одной строке, нужно писать звездочку около каждого имени переменной.</p>
+  <code>int *uka, *ukb, *ukc;</code>
+  <p>В процессе программы, значение указателя может переприсваиваться.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  double d = 0.0, d2 = 0.0;
+  double *uk = &d;
+  *uk = 5.34;
+  cout &lt;&lt; d &lt;&lt; ' ' &lt;&lt; d2 &lt;&lt; endl; // 5.34 0
+
+  uk = &d2;
+  *uk = 7.19;
+  cout &lt;&lt; d &lt;&lt; ' ' &lt;&lt; d2 &lt;&lt; endl; // 5.34 7.19
+  return 0;
+}
+</pre>
+  <p>Указатели можно переприсваивать друг другу</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  double d = 0.0, d2 = 0.0;
+  double *uk = &d;
+  *uk = 5.34;
+  cout &lt;&lt; d &lt;&lt; ' ' &lt;&lt; d2 &lt;&lt; endl; // 5.34 0
+
+  double *uk2 = &d2;
+  *uk2 = 7.19;
+  cout &lt;&lt; d &lt;&lt; ' ' &lt;&lt; d2 &lt;&lt; endl; // 5.34 7.19
+
+  uk = uk2;
+  *uk = 2.56;
+  cout &lt;&lt; d &lt;&lt; ' ' &lt;&lt; d2 &lt;&lt; endl; // 5.34 2.56
+  cout &lt;&lt; *uk &lt;&lt; ' ' &lt;&lt; *uk2 &lt;&lt; endl; // 2.56 2.56
+
+  uk = NULL; // uk = 0
+  if (uk == 0) {
+    cout &lt;&lt; "ZERO POINTER!" &lt;&lt; endl;
+  } else {
+    cout &lt;&lt; *uk &lt;&lt; endl;
+  }
+
+  return 0;
+}
+</pre>
+  <p>Возможно что два или более указателей указывают на одну и ту же переменную. В этом случае, когда мы изменяем переменную, то она изменится для всех указателей на нее указывающих.</p>
+  <p>Указателю может быть присвоено значение 0 или NULL. Это означает что указатель не указывает никуда. При попытке разименовать такой указатель, программа аварийно завершит работу с ошибкой segmentation fault. Необходимо всегда следить за тем, чтобы нулевой указатель ни при каких обстаятельствах не разименовывался.</p>
+  <p>Указатели могут сравниваться не только с нулем, но и между собой.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  long long a = 348, b = 585829;
+  long long *uka = &a;
+  long long *ukb = &b;
+  cout &lt;&lt; (uka == ukb) &lt;&lt; ' ' &lt;&lt; ((*uka) == (*ukb)) &lt;&lt; endl; // 0 0
+
+  *uka = *ukb;
+  cout &lt;&lt; (uka == ukb) &lt;&lt; ' ' &lt;&lt; ((*uka) == (*ukb)) &lt;&lt; endl; // 0 1
+
+  uka = ukb;
+  cout &lt;&lt; (uka == ukb) &lt;&lt; ' ' &lt;&lt; ((*uka) == (*ukb)) &lt;&lt; endl; // 1 1
+
+  cout &lt;&lt; (uka == ukb) &lt;&lt; endl; // 0
+  return 0;
+}
+</pre>
+
+  <p>Сравнение указателей на разные переменные смысла не имеет, потому что только компилятор решает поместить переменную в ячейку памяти с большим адресом или с меньшим. Исключением является ситуация когда указатели показывают на элементы одного и того же массива. Тогда меньшим окажется тот указатель, который указывает на элемент с меньшим индексом.</p>
+  <p>Чтобы задать массив в памяти, компилятору нужно знать три вещи.</p>
+  <ol>
+    <li>Тип элементов</li>
+    <li>Где находится начало массива</li>
+    <li>Число элементов</li>
+  </ol>
+  <p>Первые два пункта могут быть заданы указателем.</p>
+  <code>int a[10];</code>
+  <code>int *uk = a;</code>
+  <p>Это идентично записи</p>
+  <code>int *uk = &a[0]</code>
+  <p>Таким образом, можно считать, что переменная с именем a уже является указателем. От настоящего указателя его отличает только то, что невозможно изменить его значение.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int a[10];
+  a[0] = 19;
+  a[4] = 57;
+
+  int *uk = a;
+  cout &lt;&lt; *uk &lt;&lt; endl; // 19
+
+  uk = &a[0];
+  cout &lt;&lt; *uk &lt;&lt; endl; // 19
+
+  uk = &a[4];
+  cout &lt;&lt; *uk &lt;&lt; endl; // 57
+
+  return 0;
+}
+</pre>
+
+  <p>Аналогичным образом устроен и многомерный массив.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int a[10] = {5,11,34,144,38,-4,2,1,9,3};
+
+  int *uk = &a[4];
+  cout &lt;&lt; *uk &lt;&lt; endl; // 38
+
+  uk = a + 4;
+  cout &lt;&lt; *uk &lt;&lt; endl; // 38
+
+  uk -= 3; // uk = &a[1];
+  cout &lt;&lt; *uk &lt;&lt; endl; // 11
+
+  uk -= 3; // uk = &a[-2]; выход за границы массива
+  cout &lt;&lt; *uk &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+
+  <p>Компилятор никак не следит за выходом за пределы массива. Эта ответственность на программисте. Однако указатели выходящие за пределы массива вполне могут быть полезными.</p>
+
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+// большие массивы лучше объявлять глобальными
+const int MAXN = 10000000;
+int a[MAXN];
+
+int main() {
+  // заполним массив числами от 0 до MAXN-1
+  // 1 способ
+  for (int i = 0; i &lt; MAXN; i++) {
+    a[i] = i;
+  }
+  // 2 способ
+  int *ukbegin = a;
+  int *ukend = a + MAXN;
+  int i = 0;
+  for (int *uk = ukbegin; uk != ukend; uk++) {
+    *uk = i;
+    i++;
+  }
+
+  return 0;
+}
+</pre>
+
+  <p>Во втором способе применение указателей дает небольшое ускорение - порядка 10%.</p>
+</article>
