--- a/src/components/code/code-c/c-books/pages/elem-book3.html
+++ b/src/components/code/code-c/c-books/pages/elem-book3.html
@@ -10,62 +10,20 @@
 
   <p>
     <a href="#p1">1 Введение (9)</a>
-  </p>
-
-  <p>
-    <a href="#p2">2 Общий синтаксис (10)</a>
-  </p>
-
-  <p>
-    <a href="#p3">3 Основные типы данных (11)</a>
-  </p>
-
-  <p>
-    <a href="#p4">4 Операции и выражения (17)</a>
-  </p>
-
-  <p>
-    <a href="#p5">5 Операторы (32)</a>
-  </p>
-
-  <p>
-    <a href="#p6">6 Функции (39)</a>
-  </p>
-
-  <p>
-    <a href="#p7">7 Описания (42)</a>
-  </p>
-
-  <p>
-    <a href="#p8">8 Препроцессор (52)</a>
-  </p>
-
-  <p>
-    <a href="#p9">9 Структура программы (55)</a>
-  </p>
-
-  <p>
-    <a href="#p10">10 Библиотека ввода-вывода (60)</a>
-  </p>
-
-  <p>
-    <a href="#p11">11 Другие библиотеки (65)</a>
-  </p>
-
-  <p>
-    <a href="#p12">12 Форматированный вывод (70)</a>
-  </p>
-
-  <p>
-    <a href="#p13">13 Форматированный ввод (74)</a>
-  </p>
-
-  <p>
-    <a href="#p14">14 Мобильность программ на языке Си (78)</a>
-  </p>
-
-  <p>
-    <a href="#p15">Список литературы (92)</a>
+    <br><a href="#p2">2 Общий синтаксис (10)</a>
+    <br><a href="#p3">3 Основные типы данных (11)</a>
+    <br><a href="#p4">4 Операции и выражения (17)</a>
+    <br><a href="#p5">5 Операторы (32)</a>
+    <br><a href="#p6">6 Функции (39)</a>
+    <br><a href="#p7">7 Описания (42)</a>
+    <br><a href="#p8">8 Препроцессор (52)</a>
+    <br><a href="#p9">9 Структура программы (55)</a>
+    <br><a href="#p10">10 Библиотека ввода-вывода (60)</a>
+    <br><a href="#p11">11 Другие библиотеки (65)</a>
+    <br><a href="#p12">12 Форматированный вывод (70)</a>
+    <br><a href="#p13">13 Форматированный ввод (74)</a>
+    <br><a href="#p14">14 Мобильность программ на языке Си (78)</a>
+    <br><a href="#p15">Список литературы (92)</a>
   </p>
 </article>
 
