--- a/src/components/code/code-c/c-books/pages/elem-book6.html
+++ b/src/components/code/code-c/c-books/pages/elem-book6.html
@@ -177,7 +177,8 @@ int main() {
 }
 </pre>
 
-  <h4>2.4 Символические константы</h4>
+  <h4>2.4 Символические константы (21)</h4>
+
   <p>Плохо когда в программе встречаются загадочные числа вроде 300 или 20. Хорошо использовать для них конструкцию со словом #define в начале программы. Тогда можно определить символические константы. Препроцессор до выполнения компиляции заменит все символические константы на их значения. Так что полученная программа будет точно такое же, а вот читаемость программы на языке Си будет лучше.</p>
 
   <h4>Программа 7 (22)</h4>
@@ -199,7 +200,8 @@ int main() {
 }
 </pre>
 
-  <h4>2.5 Некоторые простые программы</h4>
+  <h4>2.5 Некоторые простые программы (22)</h4>
+
   <p>Чтение одного символа (обычно из терминала)</p>
   <code>c = getchar();</code>
   <p>Запись одного символа (обысно в терминал)</p>
@@ -566,7 +568,7 @@ int main() {
 }
 </pre>
 
-  <h4>2.7 Функции</h4>
+  <h4>2.7 Функции (29)</h4>
 
   <h4>Программа 23 (30)</h4>
   <p>Напишем функцию power для возведения целого числа в целую положительную степень. В программе вычисли 2⁵ и 2¹⁰</p>
@@ -621,5 +623,289 @@ int power(int m, int n) {
   return p;
 }
 </pre>
+
+  <h4>Программа 25 (31)</h4>
+  <p>Напишем программу, которая принимает строку и преобразует буквы к нижнему регистру.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+char lower(char);
+
+int main() {
+  int ch;
+  while ((ch = getchar()) != '\n') {
+    printf("%c", lower(ch));
+  }
+
+  return 0;
+}
+
+char lower(char c) {
+  char res;
+  if (c >= 65 && c &lt;= 91) {
+    res = c + 32;
+  } else {
+    res = c;
+  }
+
+  return res;
+}
+</pre>
+
+  <h4>2.8 Аргументы - вызов по значению (31)</h4>
+
+  <p>Все аргументы функции передаются "по-значению". Внутри функции создаются новые переменные со значениями, переданными в параметрах. В основной программе передаваемые аргументы остаются неизменными, внутри функции меняется только их копия.</p>
+
+  <h4>Программа 26 (31)</h4>
+  <p>Функция power() работает с копиями переменных.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int power(int, int);
+
+int main() {
+  printf("2**5=%d\n", power(2,5));
+  printf("2**10=%d\n", power(2,10));
+
+  return 0;
+}
+
+int power(int m, int n) {
+  int p;
+  for (p = 1; n > 0; --n) {
+    p *= m;
+  }
+
+  return p;
+}
+</pre>
+
+  <p>Чтобы в программе поменялось значение переменной, надо в функцию передать ее адрес. и тогда адрес не изменится, так как внутри функции будет действовать копия адреса, а переменную по этому адресу можно поменять.</p>
+  <p>Если в качестве аргумента берется имя массива, то передаваемое функции значение фактически есть адрес начала массива. Никакое копирование элементов массива не производится. Обращаясь по индексу, функция может выбирать или изменять любые элементы массива.</p>
+
+  <h4>2.9 Массивы символов (32)</h4>
+
+  <h4>Программа 27 (32)</h4>
+  <p>Напишем программу, которая читает несколько строк и затем печатает самую длинную из них. Программа читает строки. В цикле, пока есть еще строки, сравнивает строку с самой длинной, выбирает самую длинную и запоминает строку и ее длину.</p>
+<pre>
+#include &lt;stdio.h&gt;
+#define MAXLINE 1000
+
+int getline(char [], int);
+void copy(char [], char []);
+
+int main() {
+  int len;
+  int max;
+  char line[MAXLINE];
+  char save[MAXLINE];
+  max = 0;
+  while((len = getline(line, MAXLINE)) > 0) {
+    if (len > max) {
+      max = len;
+      copy(line, save);
+    }
+  }
+  if (max > 0) {
+    printf("%s", save);
+  }
+
+  return 0;
+}
+
+int getline(char s[], int lim) {
+    int c, i;
+    for (i=0; i &lt; lim - 1 && (c=getchar())!=EOF && c!='\n'; i++){
+      s[i] = c;
+    }
+    if (c == '\n') {
+      s[i] = c;
+      i++;
+    }
+    s[i] = '\0';
+    return i;
+  }
+
+void copy(char s1[], char s2[]) {
+  int i = 0;
+  while ((s2[i] = s1[i]) != '\0') {
+    i++;
+  }
+}
+</pre>
+
+  <h4>Программа 28 (34)</h4>
+  <p>Напишем программу, убирающую начальные пробелы и символы табуляции из каждой входно стрки и исключающую пустые строки.</p>
+
+  <h4>Программа 29 (34)</h4>
+  <p>Напишем программу, переставляющую символы строки в обратном порядке.</p>
+
+  <h4>2.10 Области действия. Внешние переменные (34)</h4>
+
+  <p>Внутренние переменные функции main() это локальные переменные, поскольку они объявлены и действуют внутри нее. Никакие другие функции не имеют к ним прямого доступа. Это же справедливо для переменных других функций. Любая локальная переменная начинает существовать при входе в функцию и уничтожается при выходе из функции. Такие переменные еще можно назвать автоматическими, потому что они сами независимо от нас создаются и уничтожаются автоматически.</p>
+  <p>Внешние переменные, объявленные вне функций, это глобальные переменные. К ним можно обращаться из любой функции. Их можно использовать для связи между функциями. Эти переменные существуют всегда, а не возникают и исчезают при входе и выходе из функции.</p>
+  <p>Чтобы в функции использовать глобальную переменную, ее нужно пометить как extern.</p>
+
+  <h4>Программа 30 (35)</h4>
+  <p>Перепишем программу для самой большой строки, сделав переменные line, save и max внешними.</p>
+<pre>
+#include &lt;stdio.h&gt;
+#define MAXLINE 1000
+
+char line[MAXLINE];
+char save[MAXLINE];
+int max;
+
+int getline();
+void copy();
+
+int main() {
+  int len;
+  extern int max;
+  extern char save[];
+  max = 0;
+  while((len = getline()) > 0) {
+    if (len > max) {
+      max = len;
+      copy();
+    }
+  }
+  if (max > 0) {
+    printf("%s", save);
+  }
+
+  return 0;
+}
+
+int getline() {
+    int c, i;
+    extern char line[];
+    for (i=0; i &lt; MAXLINE - 1 && (c=getchar())!=EOF && c!='\n'; i++){
+      line[i] = c;
+    }
+    if (c == '\n') {
+      line[i] = c;
+      i++;
+    }
+    line[i] = '\0';
+    return i;
+  }
+
+void copy() {
+  int i = 0;
+  extern char line[], save[];
+  while ((save[i] = line[i]) != '\0') {
+    i++;
+  }
+}
+</pre>
+  <p>Определение глобальных переменных приводит к выделению памяти, согласно их типу. Прежде чем функция сможет использовать глобальную переменную, нужно сделать имя этой переменной известным для функции. Один из спопобов сделать это - включить в функцию описание внешней переменной с помощью слова extern.</p>
+  <p>При описании переменной с помощью слова extern, память для нее не выделяется.</p>
+
+  <h4>2.11 Заключение (36)</h4>
+</article>
+
+
+<!-- Глава 3. Типы, операции и выражения -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>Глава 3. Типы, операции и выражения (38)</h3>
+
+  <h4>3.1 Имена переменных (38)</h4>
+
+  <p>Имена могут состоять из букв, цифр, символа подчеркивания. Первым символом в имени не может быть цифра.</p>
+
+  <h4>3.2 Типы данных и размеры (38)</h4>
+
+  <p>Основные типы данных в Си char, int, float, double. Несколько "уточнителей" для типа int: short, long, unsigned. Точность целых чисел зависит от конкретной машины.</p>
+
+  <h4>3.3 Константы (39)</h4>
+
+  <p>Символьная константа и строка из одного символа это не одно и то же. 'x' != "x". 'x' это символ для буквы x. "x" это строка, содержащая один символ и символ "\0".</p>
+
+  <h4>3.4 Описания (40)</h4>
+
+  <p>Перед использованием переменная должна быть объявлена. При объявлении можно задавать начальные значения.</p>
+
+  <h4>3.5 Арифметические операции (41)</h4>
+
+  <p>Операцию % остаток от деления нельзя использовать для типа float и double.</p>
+
+  <h4>3.6 Отношения и логические операции (42)</h4>
+
+  <h4>3.7 Преобразование типов (43)</h4>
+
+  <p>Автоматическое преобразование типов происходит в трех случаях</p>
+  <ol>
+    <li>Если в одном выражении операнды разных типов, то они преобразуются к одному типу.</li>
+    <li>При присваивании значение правой части преобразуется к типу левой части.</li>
+    <li>При передачи аргументов в функцию их типы преобразуются к типам параметров функции</li>
+  </ol>
+  <p>Явное преобразование называется приведением</p>
+  <code>(имя типа) выражение</code>
+
+  <h4>3.8 Операции увеличения и уменьшения (45)</h4>
+
+  <p>Операции инкремента и декремента можно применять только к переменным и нельзя применять к выражениям. Например (i + i)++ выполнить нельзя.</p>
+
+  <h4>3.9 Поразрядные логическин операции (47)</h4>
+
+  <p>Порязрядные операции нельзя применить к float и double.</p>
+
+  <h4>3.10 Операции присваивания и выражения (48)</h4>
+
+  <h4>3.11 Условные выражения (50)</h4>
+
+  <p>Найдем максимум из двух чисел</p>
+  <code>if (a>b) max=a; else max=b;</code>
+  <code>max = (a>b) & a : b;</code>
+
+  <h4>3.12 Приоритеты и порядок вычислений (50)</h4>
+
+  <p>Обращение к функциям, вложенные операторы присваивания, операции инкремента, декремента обладают побочным эффектом, связанным с порядком обращения к переменным.</p>
+</article>
+
+
+<!-- Глава 4 Управление -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>Глава 4 Управление (53)</h3>
+
+  <h4>4.1 Операторы и блоки (53)</h4>
+
+  <p>Любое выражение становится оператором, если за ним идет точка с запятой. В языке Си точка с запятой заканчивает оператор. Если операторы группируются в блок, окруженный фигурными скобками, то после закрывающей фигурной скобки точка с запятой не ставится.</p>
+
+  <h4>4.2 if - else (53)</h4>
+
+  <p>Оператор if-else применяется для принятия решения. Часть else может присутствовать, а может и не присутствовать. Если часть с else пропускается во вложенных условных операторах, то возникает неясность в толковании. Компилятор сопоставляет else с ближайшим if, не имеющим своего else. Если это не то что вам нужно, то используйте фигурные скобки перед оператором else чтобы показать к какому if он относится.</p>
+
+  <h4>4.3 else if (55)</h4>
+
+  <p>Конструкция else if используется когда нужно выбирать из многих решений.</p>
+
+  <h4>Программа 34 (55)</h4>
+  <p>Функция двоичного поиска, определяющая встречается ли значение x  в упорядоченном массиве v.</p>
+<pre>
+binary(int x, int v[], int n) {
+  int low, high, mid;
+  low = 0;
+  high = n-1;
+  while (low &lt;= high) {
+    mid = (low + high) / 2;
+    if (x &lt; v[mid]) high = mid - 1;
+    else if (x > v[mid]) low = mid + 1;
+    else return (mid);
+  }
+  return (-1);
+}
+</pre>
+
+  <h4>4.4 Переключатель (56)</h4>
+
+  <p>Переключатель (оператор switch) предназначен для принятия одного из многих решений. В нем проверяется совпадение значения выражения с одной из нескольких констант и выполняется соответствующая ветвь.</p>
+
+  <h4>4.5 Циклы while и for (57)</h4>
+
+  <h4>4.6 Цмклы do-while (60)</h4>
 </article>
 
