--- a/src/components/code/code-c/c-courses/pages/elem-cour-ya1.html
+++ b/src/components/code/code-c/c-courses/pages/elem-cour-ya1.html
@@ -1,7 +1,8 @@
 <article class="article">
   <h1>Яндекс Образования. Хендбук. Основы С++</h1>
   <p>Конспект курса</p>
-  <p><a href="https://education.yandex.ru/handbook/cpp" taget="_blank">https://education.yandex.ru/handbook/cpp</a></p>
+  <p><a href="https://education.yandex.ru/handbook/cpp" target="_blank">https://education.yandex.ru/handbook/cpp</a></p>
+  <p>Авторы: Алексей Зобнин (Яндекс), Владимир Кузнецов (Яндекс), Артём Брустовецкий (Clever Inc. (Kahoot)).</p>
 </article>
 
 
@@ -463,7 +464,44 @@ int main() {
 </pre>
 
   <h4>Размеры стандартных типов</h4>
-  <p></p>По умолчанию числовые типы – знаковые. Они имеют диапазон значений от -2<sup>n-1</sup> до 2<sup>n-1</sup> - 1, где n – количество битов, занимаемых типом. Приставка unsigned перед типом делает его беззнаковым. В этом случае диапазон допустимых значений будет от 0 до 2<sup>n</sup> - 1:
+  <p>По умолчанию числовые типы – знаковые. Они имеют диапазон значений от -2<sup>n-1</sup> до 2<sup>n-1</sup> - 1, где n – количество битов, занимаемых типом. Приставка unsigned перед типом делает его беззнаковым. В этом случае диапазон допустимых значений будет от 0 до 2<sup>n</sup> - 1:</p>
+<pre>
+int main() {
+  unsigned int ui = 4294967295;  // 2^32 - 1
+}
+</pre>
+  <p>Минимальное и максимальное значение, помещающееся в данный числовой тип, можно получить так:</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;limits&gt;  // необходимо для numeric_limits
+
+int main() {
+  // посчитаем для типа int:
+  std::cout &lt;&lt; "minimum value: "
+            &lt;&lt; std::numeric_limits<int>::min()
+            &lt;&lt; "\n"
+            &lt;&lt; "maximum value: "
+            &lt;&lt; std::numeric_limits<int>::max()
+            &lt;&lt; "\n";
+}
+</pre>
+  <p>Данный пример на 64-битной Linux-системе напечатает:</p>
+<pre>
+minimum value: -2147483648
+maximum value: 2147483647
+</pre>
+  <p>Приведённые выше примеры вывода оператора sizeof верны для 64-битных архитектур, которые на сегодняшний день распространены повсеместно. Однако если бы мы скомпилировали и запустили такую программу на компьютере с 32-битной архитектурой, то получили бы другие результаты. Например, sizeof(long int) стал бы равен 4, в то время как на современных компьютерах мы получили бы 8. Также бывают встраиваемые системы, под которые тоже можно писать на С++. Там битность архитектуры может быть ещё меньше, чем 32.</p>
+  <p>В заголовочном файле cstdint стандартной библиотеки имеются целочисленные типы с фиксированным размером:</p>
+  <ul>
+    <li>int8_t / uint8_t</li>
+    <li>int16_t / uint16_t</li>
+    <li>int32_t / uint32_t</li>
+    <li>int64_t / uint64_t</li>
+  </ul>
+  <p>Число в имени типа означает количество бит, используемых для хранения в памяти. Например, int32_t содержит 32 бита (4 байта) и часто соответствует типу int. Если система не поддерживает какой-то тип, то программа с ним просто не скомпилируется.</p>
+
+  <h4>Переполнение целочисленных типов</h4>
+
 </article>
 
 
